feat: have tasks added field part to
