# project/parttobe/views/tests_taskget.py
@@ -14,9 +14,8 @@ class TaskTestClass(TestCase):
         client = Client()
         response = client.get("/api/parttos/")
         self.assertEqual(response.status_code, 200)
-        response1 = client.get(
-            "/api/partto/?partTo={}".format(response.data["partTos"][2])
-        )
+        partTo = response.data["partTos"][2]
+        response1 = client.get("/api/partto/?partTo={}".format(partTo))
         self.assertEqual(response1.status_code, 200)
         payload1 = response1.data
         self.assertEqual(payload1["name"], "Corn on the Cob")
@@ -32,6 +31,7 @@ class TaskTestClass(TestCase):
         self.assertEqual(response.status_code, 200)
         self.assertEqual("wash the corn", response.data["description"])
         self.assertEqual(["cobbed corn"], response.data["ingredients"])
+        self.assertEqual(partTo, response.data["partTo"])
 
         response = client.get("/api/task/?task={}".format(payload1["tasks"][2]))
         self.assertEqual(response.status_code, 200)
