# project/parttofe/partto/src/api/taskget.ts
@@ -28,23 +28,19 @@ import {
 /* eslint-enable @typescript-eslint/no-unused-vars */
 
 export type TaskGet200Body = {
-  name: string;
   duration: Duration;
   description: string;
+  partTo: PartToId;
   ingredients: Array<string>;
   tools: Array<string>;
-  depends?: Array<string>;
-  engagement?: number | undefined;
 };
 
 type Wire200Body = {
-  name: string;
   duration: number;
   description: string;
+  partTo: PartToId;
   ingredients: Array<string>;
   tools: Array<string>;
-  depends?: Array<string>;
-  engagement?: number | undefined;
 };
 
 export type TaskGetArguments = { task: TaskDefinitionId };
@@ -71,19 +67,15 @@ export const useTaskGet: (
     ],
     {
       200: (body: Wire200Body) => ({
-        name: unmarshalers.required["string"](body.name),
         duration: unmarshalers.required["duration"](body.duration),
         description: unmarshalers.required["string"](body.description),
+        partTo: unmarshalers.required["PartToId"](body.partTo),
         ingredients: body.ingredients.map((value) =>
           unmarshalers.required["string"](value),
         ),
         tools: body.tools.map((value) =>
           unmarshalers.required["string"](value),
         ),
-        depends: body.depends?.map((value) =>
-          unmarshalers.required["string"](value),
-        ),
-        engagement: unmarshalers.unrequired["number"](body.engagement),
       }),
     },
     options,
